# c_models

./: .gitignore  CMakeLists.txt  README.md  data_splitter_cpp.cpp  data_splitter_py.py
data/: test_tv_activity.csv  train_tv_activity.csv
src/: ada_boost.cpp  attempt.cpp  c_data_splitter.cpp  data_preprocess.cpp  knn.cpp  mlpack.hpp  py_data_splitter.py  random_forest.cpp
